--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/address": "^5.1.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@popperjs/core": "^2.9.2",
+    "@reach/dialog": "^0.15.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,14 +16,31 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.9",
+    "@uniswap/sdk": "^3.0.3",
+    "ethers": "^5.0.12",
+    "polished": "^3.3.2",
     "react": "^17.0.2",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
+    "react-ga": "^3.3.0",
+    "react-popper": "^2.2.5",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^6.0.14",
+    "rebass": "^4.0.7",
+    "redux-localstorage-simple": "^2.3.1",
+    "styled-components": "^5.2.2",
+    "typescript": "^4.2.4",
+    "use-wallet": "^0.8.0",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.2.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +62,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "@types/rebass": "^4.0.5",
+    "@types/styled-components": "^5.1.9",
+    "rebass": "^4.0.7"
   }
 }
